OA-292: Added expand / collapse all replies button. Fixed a major bug with mark as read that was disabling js.

--- a/modules/features/oa_discussion/oa_discussion.css
+++ b/modules/features/oa_discussion/oa_discussion.css
@@ -63,3 +63,10 @@
   padding-bottom: 0;
   margin-bottom: 0;
 }
+
+#toggle-reply-visibility {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 10px;
+}
